...
        static let downButton = "article.downButton"
        static let tableView = "article.tableView"
    }
    enum Buy {
        static let continueButton = "buy.continueButton"
        static let paymentModeButton = "buy.paymentModeButton"
        static let paymentModeSwitch = "buy.paymentModeSwitch"
        static let yourCode = "buy.yourCode"
        static let yourEmail = "buy.yourEmail"
        static let yourIban = "buy.yourIban"
    }
    enum Core {
        static let launchComplete = "core.launchComplete"
    }
...
            static let pendingpayouts = "device.row.pendingpayouts"
            static let publickey = "device.row.publickey"
            static let restore = "device.row.restore"
        }
    }
    enum Header {
        static let downButton = "header.downButton"
        static let titleLabel = "header.titleLabel"
    }
    enum History {
        static let swapComplete = "history.swapComplete"
        static let swapPending = "history.swapPending"
        static let transactionAmount = "history.transactionAmount"
        static let transactionButton = "history.transactionButton"
    }
    enum Home {
        static let balanceCardButton = "home.balanceCardButton"
        static let balanceLabel = "home.balanceLabel"
        static let buyButton = "home.buyButton"
        static let currencyButton = "home.currencyButton"
        static let headerLabel = "home.headerLabel"
        static let headerSpinner = "home.headerSpinner"
        static let mapButton = "home.mapButton"
        static let profitButton = "home.profitButton"
        static let profitLabel = "home.profitLabel"
        static let receiveButton = "home.receiveButton"
        static let sendButton = "home.sendButton"
        static let syncStatusButton = "home.syncStatusButton"
    }
    enum Map {
        static let mapSpinner = "map.mapSpinner"
        static let mapView = "map.mapView"
...
    }
    enum Move {
        static let channelButton = "move.channelButton"
        static let satsInstant = "move.satsInstant"
        static let satsRegular = "move.satsRegular"
        static let satsTotal = "move.satsTotal"
        static let subtitleLabel = "move.subtitleLabel"
        static let swapButton = "move.swapButton"
    }
    enum Nav {
        static let academyButton = "nav.academyButton"
        static let settingsButton = "nav.settingsButton"
        static let walletButton = "nav.walletButton"
    }
...
        static let subtitleLabel = "profits.subtitleLabel"
        static let totalInvestmentLabel = "profits.totalInvestmentLabel"
        static let totalProfitLabel = "profits.totalProfitLabel"
        static let totalValueLabel = "profits.totalValueLabel"
    }
    enum Question {
        static let answerLabel = "question.answerLabel"
        static let channelView = "question.channelView"
        static let yellowCard = "question.yellowCard"
    }
    enum Receive {
        static let addressLabel = "receive.addressLabel"
        static let addressTitle = "receive.addressTitle"
        static let amountTextField = "receive.amountTextField"
        static let copyButton = "receive.copyButton"
        static let currencyButton = "receive.currencyButton"
        static let currencyLabel = "receive.currencyLabel"
        static let editButton = "receive.editButton"
        static let invoiceLabel = "receive.invoiceLabel"
        static let moreButton = "receive.moreButton"
        static let qrImageView = "receive.qrImageView"
        static let qrSpinner = "receive.qrSpinner"
        static let questionButton = "receive.questionButton"
        static let refreshButton = "receive.refreshButton"
    }
    enum Scanner {
        static let closeButton = "scanner.closeButton"
        static let scannerView = "scanner.scannerView"
    }
    enum Send {
...
            enum PinSet {
                static let topLabel = "signup.create.pinSet.topLabel"
            }
            enum Ready {
                static let continueButton = "signup.create.ready.continueButton"
                static let skipButton = "signup.create.ready.skipButton"
                static let topLabelOne = "signup.create.ready.topLabelOne"
            }
            enum Start {
                static let articleButton = "signup.create.start.articleButton"
                static let createWalletButton = "signup.create.start.createWalletButton"
                static let headerLabel = "signup.create.start.headerLabel"
                static let restoreButton = "signup.create.start.restoreButton"
            }
            enum Verify {
                static let backButton = "signup.create.verify.backButton"
                static let field1 = "signup.create.verify.field1"
...
            }
            static let removeWalletButton = "signup.restore.removeWalletButton"
            static let topLabel = "signup.restore.topLabel"
        }
    }
    enum Swap {
        static let amountTextField = "swap.amountTextField"
        static let fromButton = "swap.fromButton"
        static let fromLabel = "swap.fromLabel"
        static let nextButton = "swap.nextButton"
        static let subtitleLabel = "swap.subtitleLabel"
    }
    enum SwapStatus {
        static let confirmCard = "swapStatus.confirmCard"
        static let confirmStatusLabel = "swapStatus.confirmStatusLabel"
        static let refreshButton = "swapStatus.refreshButton"
...
        static let swapStatusButton = "transaction.swapStatusButton"
        static let transferFeeButton = "transaction.transferFeeButton"
        static let urlIdButton = "transaction.urlIdButton"
        static let yellowCard = "transaction.yellowCard"
    }
    enum Unlock {
        static let topLabel = "unlock.topLabel"
    }
    enum Value {
        static let currentValueLabel = "value.currentValueLabel"
        static let fiveYearsButton = "value.fiveYearsButton"
        static let graphValueLabel = "value.graphValueLabel"
        static let graphView = "value.graphView"
...
