...
    const val DONE = "Done"
    const val OOPS = "Oops!"
    const val TRY_AGAIN = "Try again"
    const val COPIED = "Copied"

    // Buy.
    const val BUY_BITCOIN = "buy bitcoin"
    const val BUY_SUBTITLE =
        "To buy bitcoin, make a bank transfer to a partner and put your unique code in the transfer description field."
    const val BUY_EMPTY = "No order has been set up. Tap below to create your first one."
    const val YOUR_EMAIL = "Your email"
    const val YOUR_IBAN = "Your IBAN"
    const val OUR_IBAN = "Partner IBAN"
...
